--- a/LAWk8chong.project
+++ b/LAWk8chong.project
@@ -75,7 +75,7 @@
       "exetitle": "",
       "expanded_pmp": null,
       "extraheaders": null,
-      "firstform": "dessertVoting",
+      "firstform": "mobileNav",
       "fontFamily": "system",
       "googlePlayKey": "certificates/google.json",
       "googlePlayTrack": "production",
